normalize urls before download